--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                 <li><a class="nav-link projects" href="#projects" class="menu-btn">project</a></li>
                 <li><a class="nav-link contact" href="#contact" class="menu-btn">contact</a></li>
                 <li>
-                  <a  id="resume-link-1" class="nav-link resume"  class="menu-btn" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Resume </a>
+                  <a   id="resume-link-1"
+                  class="nav-link resume"  class="menu-btn" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Resume </a>
                   <!-- <a href="http://" target="_blank" rel="noopener noreferrer"></a> -->
                 </li>
                
@@ -68,7 +69,7 @@
             <div class="column right">
                 <div class="text" id="user-detail-name">I'm Chandan and I'm a <span class="typing-2"></span></div>
                 <p id="user-detail-intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
-                <a href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Download CV</a>
+                <a id="resume-link-2" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Download CV</a>
             </div>
         </div>
     </div>
@@ -343,7 +344,8 @@
     <p class="footer-title">Chandan Kumar V</p>
     <div class="footer-social">
       <a
-        href=""
+      id="contact-linkedin"
+        href="https://www.linkedin.com/in/chandan-kumar-v-a464a01a4/"
         target="_blank"
         class="footer-icon"
         >
@@ -351,11 +353,11 @@
           LinkedIn</i
         ></a
       >
-      <a href="" target="_blank"
+      <a id="contact-github" href="https://github.com/Vchandankumarr" target="_blank"
       class="footer-icon"  target="_blank">
         <i class="bx bxl-github"> <br />
           GitHub</i></a>
-      <a
+      <a id="contact-email"
         href="mailto:chandankumar@gmail.com"
         target="_blank"
         class="footer-icon"
@@ -364,7 +366,7 @@
           E-mail</i
         ></a
       >
-      <a href="tel:+917353634087" target="_blank" class="footer-icon"
+      <a id="contact-phone" href="tel:+917353634087" target="_blank" class="footer-icon"
         ><i class="bx bx-phone">
           <br />
           Phone</i
