--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a class="nav-link projects" href="#projects" class="menu-btn">project</a></li>
                 <li><a class="nav-link contact" href="#contact" class="menu-btn">contact</a></li>
                 <li>
-                  <a   id="resume-link-1"
+                  <a   id="resume-button-1"
                   class="nav-link resume"  class="menu-btn" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Resume </a>
                   <!-- <a href="http://" target="_blank" rel="noopener noreferrer"></a> -->
                 </li>
@@ -52,7 +52,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div id="user-detail-name" class="text-2">Chandan Kumar V</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a  id="resume-link-2" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Resume</a>
+                <a  id="resume-button-2" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Resume</a>
             </div>
         </div>
     </section>
@@ -69,7 +69,7 @@
             <div class="column right">
                 <div class="text" id="user-detail-name">I'm Chandan and I'm a <span class="typing-2"></span></div>
                 <p id="user-detail-intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
-                <a id="resume-link-2" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Download CV</a>
+                <a id="resume-button-2" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Download CV</a>
             </div>
         </div>
     </div>
