--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 <li><a class="nav-link skills" href="#skills" class="menu-btn">skills</a></li>
                 <li><a class="nav-link projects" href="#projects" class="menu-btn">project</a></li>
                 <li><a class="nav-link contact" href="#contact" class="menu-btn">contact</a></li>
-                <li id="resume-button-1">
-                  <a id="resume-link-1"  
+                <li>
+                  <a   id="resume-button-1"
                   class="nav-link resume"  class="menu-btn" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Resume </a>
                   <!-- <a href="http://" target="_blank" rel="noopener noreferrer"></a> -->
                 </li>
