--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div id="user-detail-name" class="text-2">Chandan Kumar V</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a  id="resume-link-2" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Resume</a>
+                <a  id="resume-button-2" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Resume</a>
             </div>
         </div>
     </section>
