--- a/index.html
+++ b/index.html
@@ -295,46 +295,47 @@
     </div>
 </section>
 
+ <!-- <------------------ GitHUB -------------------- -->
+ <section class="react-activity-calendar">
+  <h1>GitHub</h1>
+  <span></span>
+  <div class="git-box">
+      <div>
+          <img id="github-streak-stats"
+          src="https://github-readme-streak-stats.herokuapp.com?user=Vchandankumarr&theme=radical&hide_border=true&border_radius=6.5&date_format=M%20j%5B%2C%20Y%5D"
+          alt="streakstat" />
+      </div>
+      <div>
+          <img id="github-top-langs"
+          src="https://github-readme-stats.vercel.app/api/top-langs/?username=Vchandankumarr&theme=outrun"
+          alt="top_languages" />
+      </div>
+      <div>
+          <img id="github-stats-card"
+          src="https://github-readme-stats.vercel.app/api?username=Vchandankumarr&count_private=true" alt="stat-card" />
+      </div>
+  </div>
+</section>
+<section id="gitcal">
+  <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
 
+  <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
+  <link rel="stylesheet" href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css" />
 
+  <!-- Prepare a container for your calendar. -->
+  <div class="calendar">
+      <!-- Loading stuff -->
+      Loading the data just for you.
+  </div>
 
+  <script>
+      GitHubCalendar(".calendar", "Vchandankumarr");
+      // or enable responsive functionality
+      GitHubCalendar(".calendar", "Vchandankumarr", { responsive: true });
+  </script>
+</section>   
 
-<h1 class="center-h1 margin-purpusegithub" >My GitHub Calender and Statistics</h1>
-<!-- here stats ends -->
-      <script
-  src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js">
-</script>
-
-<!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
-<link
-  rel="stylesheet"
-  href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
-/>
-
-<!-- Prepare a container for your calendar. -->
-
-<div class="calendar">
-  <!-- <h1>My GitHub Contributions</h1> -->
-    <!-- Loading stuff -->
-    
-</div>
-
-<!-- stats from github -->
-<!-- <p class="git-stat-center"><img  src="https://github-readme-stats.vercel.app/api/top-langs?username=Vchandankumarr&show_icons=true&locale=en&layout=compact" alt="rajshekar" /></p> -->
-
-<a class="git-stat-center" href="https://git.io/streak-stats"><img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com?user=Vchandankumarr&layout=compact&theme=dark"/></a>
-
-<p class="git-stat-center">&nbsp;<img id="github-stats-card"  align="center" src="https://github-readme-stats.vercel.app/api?username=Vchandankumarr&show_icons=true&locale=en&layout=compact&theme=dark" alt="Vchandankumarr" /></p>
-
-<p align="center" class="git-stat-center">
-  
-  <img id="github-top-langs"  align="center" src="https://github-readme-stats.vercel.app/api/top-langs?username=Vchandankumarr&show_icons=true&locale=en&layout=compact&theme=dark" alt="Vchandankumarr" />
- 
- </p>
-
-<!-- stats end for github -->
-
-
+<!-- END of github -->
 
 
 
