--- a/index.html
+++ b/index.html
@@ -328,11 +328,11 @@
       Loading the data just for you.
   </div>
 
-  <script>
+  <!-- <script>
       GitHubCalendar(".calendar", "Vchandankumarr");
       // or enable responsive functionality
       GitHubCalendar(".calendar", "Vchandankumarr", { responsive: true });
-  </script>
+  </script> -->
 </section>   
 
 <!-- END of github -->
