--- a/index.html
+++ b/index.html
@@ -52,8 +52,13 @@
                 <div class="text-1">Hello, my name is</div>
                 <div id="user-detail-name" class="text-2">Chandan Kumar V</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
-                <a  id="resume-button-2" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Resume</a>
-            </div>
+                <!-- <a  id="resume-button-2" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Resume</a> -->
+                <button class="btn" id="resume-button-2">
+                  <a href="./images/Chandan_Kumar_V_Resume.pdf" target="_blank" download="Chandan_Kumar_V_Resume" id="resume-link-2" 
+                  onclick="window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing')">Resume</a>
+              </button>
+            
+              </div>
         </div>
     </section>
 
