added resume button

--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
             </div>
             <div class="column right">
                 <div class="text" id="user-detail-name">I'm Chandan and I'm a <span class="typing-2"></span></div>
+                
                 <p id="user-detail-intro">html CSS JavaScript Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
+                <button class="btn" id="resume-button-2">
+                  <a href="./images/Chandan_Kumar_V_Resume.pdf" target="_blank" download="Chandan_Kumar_V_Resume" id="resume-link-2" 
+                  onclick="window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing')">Resume</a>
+              </button>
                 <!-- <a id="resume-button" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Download CV</a> -->
             </div>
         </div>
