--- a/index.html
+++ b/index.html
@@ -53,13 +53,19 @@
                 <div class="text-1">Hello, my name is</div>
                 <div id="user-detail-name" class="text-2">Chandan Kumar V</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
+
+                <button id="resume-button-2"><a id="resume-link-2" href="images/Chandan_Kumar_V_Resume.pdf" target="_blank"
+                  download="">Resume</a></button>
+
                 <!-- <a  id="resume-button-2" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Resume</a> -->
                 <!-- <button class="btn" id="resume-button-2">
 
                   <a href="./images/Chandan_Kumar_V_Resume.pdf" target="_blank" download="Chandan_Kumar_V_Resume" id="resume-link-2" 
                   onclick="window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing')">Resume</a>
               </button> -->
-              <li id="resume-button-2"><a href="./images/Chandan_Kumar_V_Resume.pdf" class="menu-btn nav-link resume button" id="resume-link-2" download="" target="_blank">Resume <i class="fa-solid fa-download"></i></a></li>
+
+
+              <!-- <li id="resume-button-2"><a href="./images/Chandan_Kumar_V_Resume.pdf" class="menu-btn nav-link resume button" id="resume-link-2" download="" target="_blank">Resume <i class="fa-solid fa-download"></i></a></li> -->
               </div>
         </div>
     </section>
