--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div id="user-detail-name" class="text-2">Chandan Kumar V</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
 
-                <button id="resume-button-2"><a id="resume-link-2" href="images/Chandan_Kumar_V_Resume.pdf" target="_blank"
+                <button id="resume-button-2"><a id="resume-link-2" href="Chandan_Kumar_V_Resume.pdf" target="_blank"
                   download="">Resume</a></button>
 
                 <!-- <a  id="resume-button-2" href="images/Chandan_Kumar_V_Resume.pdf" download onclick=" window.open('https://drive.google.com/file/d/1G0kIUTR_GnQWXla1PxiMxtLIL-9yrom3/view?usp=sharing','_blank')">Resume</a> -->
